refactor: Update test classes for Category, Dish, Order, and Restaurant; improve method names and assertions for clarity